fix err npm run build

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,4 +18,6 @@ jobs:
           npm install
 
       - name: Build                   # React Build
-        run: npm run build
+        run: |
+          cd FE
+          npm run build
