--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           cd FE
           npm install
+          npm install @material-ui/icons
 
       - name: Build                   # React Build
         run: |
