--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -10,13 +10,14 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout source code.   # 레포지토리 체크아웃
-        uses: actions/checkout@master
+        uses: actions/checkout@main
 
       - name: Install Dependencies    # 의존 파일 설치
         run: |
           cd FE
-          npm install --save --legacy-peer-deps
-          npm install @material-ui/icons
+          npm install
+#          npm install --save --legacy-peer-deps
+#          npm install @material-ui/icons
 
       - name: Build                   # React Build
         run: |
