--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           cd FE
           npm install
-          npm install react-icons --save
+          npm install @react-icons/all-files --save
 #          npm install --save --legacy-peer-deps
 #          npm install @material-ui/icons
 
