--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,15 +12,22 @@ jobs:
       - name: Checkout source code.   # 레포지토리 체크아웃
         uses: actions/checkout@main
 
+      - name: Cache node modules      # node modules 캐싱
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+
       - name: Install Dependencies    # 의존 파일 설치
         run: |
           cd FE
           npm install
           npm install @react-icons/all-files --save
-#          npm install --save --legacy-peer-deps
-#          npm install @material-ui/icons
 
-      - name: Build                   # React Build
+      - name: Build
         run: |
           cd FE
           npm run build
