--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -31,3 +31,13 @@ jobs:
         run: |
           cd FE
           npm run build
+
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            build s3://github-action-fe-test-s3
