--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -32,13 +32,17 @@ jobs:
           cd FE
           npm run build
 
+      - name: Check Package
+        run:
+          pwd
+
+      - name: Check Files
+        run:
+          ls -l
+
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          pwd
-          aws s3 cp \
-            --recursive \
-            --region ap-northeast-2 \
-            build s3://github-action-fe-test-s3
+          aws s3 cp --recursive --region ap-northeast-2 build s3://github-action-fe-test-s3
