--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -45,4 +45,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp --recursive --region ap-northeast-2 build s3://github-action-fe-test-s3
+          cd FE
+          cd dist
+          aws s3 cp --recursive --region ap-northeast-2 dist s3://github-action-fe-test-s3
