edit aws s3 cp ~

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -46,5 +46,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           cd FE
-          cd dist
-          aws s3 cp --recursive --region ap-northeast-2 dist s3://github-action-fe-test-s3
+          aws s3 cp dist/ s3://github-action-fe-test-s3 --recursive --region ap-northeast-2
+#          aws s3 cp --recursive --region ap-northeast-2 dist s3://github-action-fe-test-s3
