--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -32,7 +32,7 @@ jobs:
           cd FE
           npm run build
 
-      - name: move to FE package
+      - name: find dist directory
         run: |
           cd FE
           pwd
@@ -44,7 +44,15 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY : ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_EC2_METADATA_DISABLED: true
+
+        # dist 파일은 FE 디렉토리 내부에 있으므로 이동해야 한다.
+        run: |
+          cd FE 
+          aws s3 cp dist/ s3://github-action-fe-test-s3 --recursive --region ap-northeast-2
+
+      - name: CloudFront Invalidation
         run: |
           cd FE
-          aws s3 cp dist/ s3://github-action-fe-test-s3 --recursive --region ap-northeast-2
-#          aws s3 cp --recursive --region ap-northeast-2 dist s3://github-action-fe-test-s3
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_ID}} --paths /*
+
