--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -50,6 +50,15 @@ jobs:
           cd FE 
           aws s3 cp dist/ s3://github-action-fe-test-s3 --recursive --region ap-northeast-2
 
+      # 업로드한 s3 파일을 각 CDN 캐시 무효화하여 리프레시 하기
+      # AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY 설정이 없다면 자격 증명 오류가 뜬다.
       - name: CloudFront Invalidation
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_ID}} --paths /* --region ap-northeast-2
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_CLOUDFRONT_ID: ${{ secrets.AWS_CLOUDFRONT_ID }}
+
+        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths /* --region ap-northeast-2
+
+#        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths /* --region ap-northeast-2
 
