--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -58,7 +58,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_CLOUDFRONT_ID: ${{ secrets.AWS_CLOUDFRONT_ID }}
 
-        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths "/*" --region ap-northeast-2
 
 #        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths /* --region ap-northeast-2
 
