--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -32,6 +32,14 @@ jobs:
           cd FE
           npm run build
 
+      # aws user 연결
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
       - name: find dist directory
         run: |
           cd FE
@@ -59,8 +67,3 @@ jobs:
           AWS_CLOUDFRONT_ID: ${{ secrets.AWS_CLOUDFRONT_ID }}
 
         run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths "/*" --region ap-northeast-2
-
-#        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths /* --region ap-northeast-2
-
-#        run: aws cloudfront create-invalidation --distribution-id $AWS_CLOUDFRONT_ID --paths /* --region ap-northeast-2
-
